# badval

./: CMakeLists.txt  LICENSE.txt  README.md
include/: badval.hpp
test/: badtest.cpp
